# Capita-Selecta

Parser/: Parser.cabal  commands.md  package.yaml  stack.yaml
Parser/App/: NumericallyUnstableCalculator.hs
Parser/Src/: Distributions.hs  Evaluator.hs  Main.hs  Parser.hs  Parserator.hs  Representation.hs  Visualisator.hs  program.kuifje  program2.kuifje
Parser/Test/: DistributionsTest.hs
Parser/Tests/: DistributionTest.hs  DistributionsTest.hs  EvaluatorTest.hs  Main.hs  ParserTest.hs
Parser/app/: Distributions.hs  Evaluator.hs  Main.hs  Parser.hs  Reader.hs  Representation.hs  Visualisator.hs  Visualisor.hs  parser.hs  stringify.hs  temp.hs  test.txt  visualise.hs
Parser/app/archive/: code.hs  notes.md  temporary.hs
Parser/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
