cabal-version:      2.2
name:               Parser
version:            0.1.0.0
description:        A calculator which is numerically unstable.
author:             El Kaddouri Ibrahim
maintainer:         ibrahim.elkaddouri@student.kuleuven.be
build-type:         Simple
extra-source-files:
    README.md
    CHANGELOG.md

executable CC
  main-is:            Main.hs
  other-modules:
      Distributions
      Evaluator
      Representation
      Visualisator
      Parserator
  hs-source-dirs:
      Src
  ghc-options:        -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    base >=4.7 && <5
    , containers
    , gnuplot
    , parsec
    , random
    , mtl
    , directory
    , filepath
    , optparse-applicative
  default-language:   Haskell2010

-- test-suite Parser-test
--   type:               exitcode-stdio-1.0
--   main-is:            DistributionsTest.hs
--   other-modules:
--       DistributionsTest
--       Distributions
--       Evaluator
--       Parser
--       Representation
--       Visualisator
--   hs-source-dirs:
--       Tests
--       Src
--   ghc-options:        -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
--   build-depends:
--     QuickCheck
--     , base >=4.7 && <5
--     , containers
--     , gnuplot
--     , parsec
--     , random
--     , mtl
--   default-language:   Haskell2010
