cabal-version:      2.2
name:               Parser
version:            0.1.0.0
description:        A calculator which is numerically unstable.
author:             El Kaddouri Ibrahim
maintainer:         ibrahim.elkaddouri@student.kuleuven.be
build-type:         Simple
extra-source-files:
    README.md
    CHANGELOG.md

executable CC
  main-is:            Src/Main.hs
  other-modules:
      Src.Distributions
      Src.Evaluator
      Src.Representation
      Src.Visualisator
      Src.Parserator
  hs-source-dirs:     .
  ghc-options:        -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    base >=4.7 && <5
    , containers
    , gnuplot
    , parsec
    , random
    , mtl
    , directory
    , filepath
    , optparse-applicative
  default-language:   Haskell2010

test-suite CT
  type:               exitcode-stdio-1.0
  main-is:            Tests/Main.hs
  other-modules:
      Tests.DistributionTest
      Tests.EvaluatorTest
      Tests.ParserTest
      Src.Distributions
      Src.Evaluator
      Src.Representation
      Src.Visualisator
      Src.Parserator
  hs-source-dirs:
      .
  ghc-options:        -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    QuickCheck
    , base >=4.7 && <5
    , containers
    , gnuplot
    , parsec
    , random
    , mtl
    , HUnit
    , directory
    , filepath
    , optparse-applicative
  default-language:   Haskell2010
